nvim: Update coc settings

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -5,6 +5,8 @@
       "args": ["start"],
       "filetypes": ["sh"],
       "ignoredRootPaths": ["~"]
-    }
-  }
+    },
+  },
+  "python.jediEnabled": false,
+  "python.formatting.provider": "black",
 }
