Ranger: Fix typo in pdf configuration

--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -104,7 +104,7 @@ mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has open,     X, flat f = open "$@"
+ext pdf, has open,     X, flag f = open "$@"
 
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
