Re-add i3spotifystatus

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "oh-my-zsh-custom/themes/nidoranarion"]
 	path = oh-my-zsh-custom/themes/nidoranarion
 	url = https://github.com/NicolaiRuckel/nidoranarion.git
+[submodule "scripts/i3spotifystatus"]
+	path = scripts/i3spotifystatus
+	url = git@github.com:rpieja/i3spotifystatus.git
