--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
 [submodule "oh-my-zsh-custom/themes/nidoranarion"]
 	path = oh-my-zsh-custom/themes/nidoranarion
-	url = https://github.com/NicolaiRuckel/nidoranarion.git
+	url = git@github.com/NicolaiRuckel/nidoranarion.git
 [submodule "scripts/i3spotifystatus"]
 	path = scripts/i3spotifystatus
 	url = git@github.com:rpieja/i3spotifystatus.git
