nvim: Automatically install plugins

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ scripts/battery/uevent
 config/gtk-3.0/bookmarks
 config/nvim/spell/.gitignore
 config/nvim/spell/.gitattributes
+config/nvim/autoload/plug.vim
