coc.nvim: Set line length for black to 79

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -11,4 +11,5 @@
   "python.linting.pylintEnabled": true,
   "python.linting.pydocstyleEnabled": true,
   "python.formatting.provider": "black",
+  "python.formatting.blackArgs": ["-l", "79"]
 }
