--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -8,8 +8,13 @@
     },
   },
   "python.linting.flake8Enabled": true,
+  "python.linting.flake8Path": "/bin/flake8",
   "python.linting.pylintEnabled": true,
+  "python.linting.pylintPath": "/bin/pylint",
   "python.linting.pydocstyleEnabled": true,
+  "python.linting.pydocstylePath": "/bin/pydocstyle",
   "python.formatting.provider": "black",
-  "python.formatting.blackArgs": ["-l", "79"]
+  "python.formatting.blackArgs": ["-l", "79"],
+  "python.formatting.blackPath": "/bin/black",
+  "python.jediPath": "/usr/lib/python3.8/site-packages/",
 }
