--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -9,6 +9,7 @@
   },
   "python.linting.flake8Enabled": true,
   "python.linting.pydocstyleEnabled": true,
+  "python.linting.pylintEnabled": false,
   "python.formatting.provider": "black",
   "python.formatting.blackArgs": ["-l", "79"]
 }
