--- a/config/i3/config
+++ b/config/i3/config
@@ -319,7 +319,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id ~/dotfiles/scripts/backlight.sh
 bindsym XF86MonBrightnessDown exec --no-startup-id ~/dotfiles/scripts/backlight.sh 0.66
 
 # screenshots
-bindsym Print exec --no-startup-id flameshot gui
+bindsym Print exec --no-startup-id flameshot gui -p ~/media/pictures/screenshots
 
 # rename workspace
 bindsym $mod+n exec --no-startup-id ~/dotfiles/scripts/i3-rename-workspace.sh
