--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ config/gtk-3.0/bookmarks
 config/nvim/spell/.gitignore
 config/nvim/spell/.gitattributes
 config/nvim/autoload/plug.vim
+config/nvim/autoload/plug.vim.old
