--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,3 +1,15 @@
+font:
+  normal:
+    family: Font Awesome
+    family: Source Code Pro
+    style: Regular
+  bold:
+    family: Source Code Pro
+    style: Bold
+  italic:
+    family: Source Code Pro
+    style: Italic
+
 colors:
   primary:
     background: '#f7f7f7'
