--- a/config/sway/config
+++ b/config/sway/config
@@ -41,7 +41,7 @@ exec swayidle -w \
 
 ### Input configuration
 
-input "1739:30383:CUST0001:00_06CB:76AF_Touchpad" {
+input type:touchpad {
     dwt enabled
     tap enabled
     natural_scroll enabled
