--- a/config/waybar/config
+++ b/config/waybar/config
@@ -4,8 +4,8 @@
     "height": 30, // Waybar height (to be removed for auto height)
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode"],
-    "modules-center": ["clock", "custom/rofication"],
-    "modules-right": ["idle_inhibitor", "pulseaudio", "network", "cpu",
+    "modules-center": ["clock"],
+    "modules-right": ["custom/rofication", "idle_inhibitor", "pulseaudio", "network", "cpu",
     "memory", "temperature", "backlight", "battery", "clock#date", "tray"],
     // Modules configuration
     // "sway/workspaces": {
