--- a/config/sway/config
+++ b/config/sway/config
@@ -197,7 +197,7 @@ input type:keyboard {
 
 # Screenshots
 
-    bindsym print exec --no-startup-id slurp | grim - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
+    bindsym print exec --no-startup-id  grim $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
     bindsym Shift+print exec --no-startup-id slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 
 ### Window rules
