--- a/config/sway/config
+++ b/config/sway/config
@@ -35,11 +35,11 @@ bindswitch --reload --locked lid:off output $laptop enable
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
-exec swayidle -w \
-             timeout 300 'swaylock -f -c 000000' \
-             timeout 600 'swaymsg "output * dpms off"' \
-             resume 'swaymsg "output * dpms on"' \
-             before-sleep 'swaylock -f -c 000000'
+# exec swayidle -w \
+#              timeout 300 'swaylock -f -c 000000' \
+#              timeout 600 'swaymsg "output * dpms off"' \
+#              resume 'swaymsg "output * dpms on"' \
+#              before-sleep 'swaylock -f -c 000000'
 
 ### Input configuration
 
@@ -79,7 +79,7 @@ input type:keyboard {
     floating_modifier $mod normal
 
     # Reload the configuration file
-    bindsym $mod+Shift+r reload
+    bindsym $mod+Shift+F2 reload
 
     # Lock screen
     bindsym $mod+z exec ~/dotfiles/scripts/swaylock.sh
