--- a/config/sway/config
+++ b/config/sway/config
@@ -229,6 +229,12 @@ client.urgent           $border     $urgent     $text   $urgent     $urgent
 
 # Startup applications
 exec autotiling
+
+# Configuration:
+# https://wiki.archlinux.org/index.php/GNOME/Keyring#PAM_method
+# https://wiki.archlinux.org/index.php/GNOME/Keyring#Start_SSH_and_Secrets_components_of_keyring_daemon
+# requires `export SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/keyring/ssh"` in zshrc
+
 exec gnome-keyring-daemon --start
 
 # Hide cursor after 5 seconds of inactivity
