--- a/config/sway/config
+++ b/config/sway/config
@@ -24,6 +24,7 @@ bindsym $mod+n exec rofication-gui.py
 
 output eDP-1 bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 output DP-3 bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_2048x1536.png fill
+output 'Sony SONY TV  *00 0x00000101' disable
 
 # Clamshell mode
 set $laptop eDP-1
