waybar: Enable CPU tooltip

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -49,7 +49,7 @@
     },
     "cpu": {
         "format": "{usage}% ",
-        "tooltip": false
+        "tooltip": true
     },
     "memory": {
         "format": "{}% "
