--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -7,6 +7,7 @@
       "ignoredRootPaths": ["~"]
     },
   },
+  "highlight.colorNames.enable": false,
   "python.linting.flake8Enabled": true,
   "python.linting.pydocstyleEnabled": true,
   "python.linting.pylintEnabled": false,
