--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -9,6 +9,8 @@
     },
   },
   "highlight.colorNames.enable": false,
+  "python.jediPath": "/usr/lib/python3.8/site-packages/",
+  "python.venvFolders": "~/.cache/pypoetry/virtualenvs",
   "python.linting.flake8Enabled": true,
   "python.linting.pydocstyleEnabled": true,
   "python.linting.pylintEnabled": false,
