--- a/config/sway/config
+++ b/config/sway/config
@@ -277,7 +277,7 @@ exec im.riot.Riot &
 
 # work stuff
 exec com.skype.Client &
-exec slack &
+exec com.slack.Slack &
 exec com.mattermost.Desktop &
 
 # misc
