Swaywm: Start Mattermost at startup

--- a/config/sway/config
+++ b/config/sway/config
@@ -279,6 +279,7 @@ exec im.riot.Riot &
 # work stuff
 exec com.skype.Client &
 exec slack &
+exec com.mattermost.Desktop &
 
 # misc
 exec firefox &
