--- a/config/sway/config
+++ b/config/sway/config
@@ -246,9 +246,9 @@ bindsym $mod+Control+Shift+Up move workspace to output up
 for_window [app_id="pavucontrol"] floating enable
 for_window [instance="keepassxc"] floating enable
 
-assign [class="firefox"] 2
+assign [app_id="firefox"] 2
 
-assign [class="Thunderbird"] 3
+assign [app_id="thunderbird"] 3
 assign [app_id="evolution"] 3
 
 assign [class="discord"] 4
