--- a/config/git/config
+++ b/config/git/config
@@ -15,5 +15,5 @@
 [alias]
 	fuckit = reset --hard
 [core]
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	; pager = diff-so-fancy | less --tabs=4 -RFX
 	excludesfile = /home/nicolai/.config/git/gitignore
