Git: Use `main` as default branch

--- a/config/git/config
+++ b/config/git/config
@@ -17,3 +17,5 @@
 [core]
 	; pager = diff-so-fancy | less --tabs=4 -RFX
 	excludesfile = /home/nicolai/.config/git/gitignore
+[init]
+	defaultBranch = main
