--- a/config/systemd/user/pipewire-microphone.service
+++ b/config/systemd/user/pipewire-microphone.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=Create mono microphone out of stereo one by Focusrite Scarlett 2i2
-Requires=pipewire.service
-After=pipewire.service
+Requires=pipewire.service pipewire-pulse.service pipewire-media-session.service
+After=pipewire.service pipewire-pulse.service pipewire-media-session.service
 
 [Service]
 Type=oneshot
 ExecStart=/home/nicolai/dotfiles/scripts/pipewire-microphone.sh
+Restart=on-failure
+RestartSec=5s
 
 [Install]
 WantedBy=default.target
