--- a/config/sway/config
+++ b/config/sway/config
@@ -283,3 +283,11 @@ bar {
 
 include /etc/sway/config.d/*
 include ~/dotfiles/config/sway/`hostname`
+
+# https://github.com/emersion/xdg-desktop-portal-wlr#running
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway XDG_SESSION_TYPE=wayland
+# exec "systemctl --user import-environment"
+
+# Enable screen sharing
+exec /usr/lib/xdg-desktop-portal -r &
+exec /usr/lib/xdg-desktop-portal-wlr &
