--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -15,5 +15,5 @@
   "python.linting.pydocstyleEnabled": true,
   "python.linting.pylintEnabled": false,
   "python.formatting.provider": "black",
-  "python.formatting.blackArgs": ["-l", "79"],
+  "python.formatting.blackArgs": ["-l", "79"]
 }
