--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -8,6 +8,7 @@
       "ignoredRootPaths": ["~"]
     }
   },
+  "suggest.noselect": true,
   "highlight.colorNames.enable": false,
   "python.jediPath": "/usr/lib/python3.8/site-packages/",
   "python.venvFolders": ["~/.cache/pypoetry/virtualenvs", ".venv"],
